add the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>my simple website</title>
+  <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-  
+  <div>
+    <h3>my first website</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti a, rem dolorum expedita dicta laborum quibusdam eveniet molestiae omnis adipisci voluptates nostrum ipsam dolor esse odio, repudiandae sequi non quasi.</p>
+  </div>
 </body>
 </html>
