added the second and third blog

--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
     <h3>my first website</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti a, rem dolorum expedita dicta laborum quibusdam eveniet molestiae omnis adipisci voluptates nostrum ipsam dolor esse odio, repudiandae sequi non quasi.</p>
   </div>
+  <div>
+    <h3>my second blog</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti a, rem dolorum expedita dicta laborum quibusdam eveniet molestiae omnis adipisci voluptates nostrum ipsam dolor esse odio, repudiandae sequi non quasi.</p>
+  </div>
+  <div>
+    <h3>my third website</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti a, rem dolorum expedita dicta laborum quibusdam eveniet molestiae omnis adipisci voluptates nostrum ipsam dolor esse odio, repudiandae sequi non quasi.</p>
+  </div>
 </body>
 </html>
