add a list to push code

--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
     <h3>my third website</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti a, rem dolorum expedita dicta laborum quibusdam eveniet molestiae omnis adipisci voluptates nostrum ipsam dolor esse odio, repudiandae sequi non quasi.</p>
   </div>
+  <div>
+    <h3>how to push incremental code </h3>
+    <ul>
+      <li>git add .</li>
+      <li>git commit -m"add a meaning full commit massage"</li>
+      <li>git push</li>
+    </ul>
+  </div>
 </body>
 </html>
