--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
       <li>git push</li>
     </ul>
   </div>
+  <div class="pic">
+    <h3>my pc</h3>
+    <img src="images/IMG_20221021_134944.jpg" alt="my image">
+  </div>
 </body>
 </html>
