--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
   <div class="pic">
     <h3>my pc</h3>
-    <img src="images/IMG_20221021_134944.jpg" alt="my image">
+    <img class="pici" src="images/IMG_20221021_134944.jpg" alt="my image">
   </div>
 </body>
 </html>
